--- a/main.css
+++ b/main.css
@@ -742,7 +742,7 @@ PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
 @media (min-width: 700px) and (max-width:999px) {
 
 
-2
+/* 2 */
 
 
 /* RICH TEXT FOTKA CENTAR*/
@@ -779,7 +779,7 @@ OVO JE UGAŠENO
 }
   @media (min-width: 1000px) and (max-width:1199px) {
 
- 3
+ /* 3 */
 
 
     /* RICH TEXT FOTKA CENTAR*/
@@ -804,7 +804,7 @@ OVO JE UGAŠENO
 }
   @media (min-width: 1200px) and (max-width:1599px) {
 
-3
+/* 3 */
 /*
     .nav-link.w-inline-block.w--current:before, .underline::before {
       border-bottom: solid 3px #9b2557;
@@ -822,7 +822,7 @@ OVO JE UGAŠENO
  
   @media (min-width: 1600px) and (max-width:1999px) {
 
- 4
+ /* 4 */
 
 
 /*
@@ -840,7 +840,7 @@ OVO JE UGAŠENO
   @media (min-width: 2000px) and (max-width:2399px) {
 
 
-   6
+   /* 6 */
 
 
 /*  
@@ -857,7 +857,7 @@ OVO JE UGAŠENO
 
   @media (min-width: 2400px) {
   
-   5
+   /* 5 */
 
   /*
   .nav-link.w-inline-block.w--current:before, .underline::before {
