--- a/main.css
+++ b/main.css
@@ -355,7 +355,7 @@ NTH CHILDS
 
 
 
-.child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+.child:nth-child(1) .newname, .search-grid-auto:nth-child(1) {
   border-top: 3px solid #259b2f;
 }
 
