--- a/main.css
+++ b/main.css
@@ -356,7 +356,7 @@ NTH CHILDS
 
 
 .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
-  border-top: 3px solid #259b2f;
+  border-top: 3px solid #9b2557;
 }
 
 .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
@@ -366,52 +366,6 @@ NTH CHILDS
 
 
 
-
-/*
-================================================================================
-HOME TAB BEFORE
-================================================================================
-*/
-
-
-
-
- 
-
-  /*
-  .doc-grid-item:nth-of-type(1) {
-    border-top: 3px solid #9b2557;
-    
-  }
-  
-  .doc-grid-item:nth-last-of-type(1) {
-    border-bottom: 3px solid #9b2557;
-    
-  }
-  
-  .docsolowrap:nth-last-of-type(n+1) {
-    border-bottom: 3px solid #9b2557;
-    
-  }
-
-  .projectsolowrapfix:nth-last-of-type(-n+2) {
-    border-bottom: 3px solid #9b2557;
-   }
-  
-  .projectsolowrapfix:nth-of-type(1) {
-    border-top: 3px solid #9b2557;
-   }
-
-   .contactwrap:nth-last-child(-n+2) {
-    border-bottom: 3px solid #9b2557;
-    padding-bottom: 3rem;
-  }
-
-  .searchcontentwrap:nth-last-child(1) {
-    border-bottom: 3px solid #9b2557;
-    
-  }
-  
   
 /*
 ================================================================================
@@ -715,6 +669,16 @@ MEDIA QUERY
 
 @media (max-width: 699px) {
 
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+    border-top: 2px solid #9b2557;
+  }
+  
+  .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+  .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+    border-bottom: 2px solid #9b2557;
+  }
+
+
 
   .verticalx{
     width: calc(7em*21/29.7);
@@ -750,33 +714,6 @@ MEDIA QUERY
 
 
 
-  /*
-  .contactwrap, .footersponzorwrap  {
-    border-top: 2px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;  
-  }
-*/
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 2px solid #9b2557;  
-  }
-  */
-
 
 
 /*
@@ -790,13 +727,6 @@ PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
   */
 
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
 
 */
   .swiper-pagination {
@@ -819,6 +749,15 @@ PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
  
 @media (min-width: 700px) and (max-width:999px) {
 
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+    border-top: 2px solid #9b2557;
+  }
+  
+  .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+  .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+    border-bottom: 2px solid #9b2557;
+  }
+
 /* RICH TEXT FOTKA CENTAR*/
 .w-richtext figure.w-richtext-align-floatleft {
   width: 100%;
@@ -835,34 +774,6 @@ PROVJERI OVO NAKNADNO JE UGAŠENO PA MOŽDA NEŠTO RADI
 
 
 
-
-/*
-  .contactwrap, .footersponzorwrap {
-    border-top: 2px solid #9b2557;
-}
-
-  .child:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 2px solid #9b2557;  
-  }
-
-/*
-  .claniceminigrid, .newsminigrid {
-    border-top: 2px solid #9b2557;  
-  }*/
-
-
 /*
 OVO JE UGAŠENO 
   .nav-link.w-inline-block.w--current:before, .underline::before {
@@ -875,15 +786,6 @@ OVO JE UGAŠENO
     height: 2px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 2px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 2px solid #9b2557;
-  }
-   
-  */
   .swiper-pagination {
     display: none!important;
 }
@@ -907,35 +809,6 @@ OVO JE UGAŠENO
 
 
 
-    /*
-  .contactwrap, .footersponzorwrap  {
-    border-top: 3px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 3px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 3px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 3px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 3px solid #9b2557;  
-  }
-
-
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 3px solid #9b2557;  
-  }
-  */
-
-
 /*
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 3px #9b2557;
@@ -945,49 +818,13 @@ OVO JE UGAŠENO
     height: 3px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 3px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 3px solid #9b2557;
-  }
-
-*/
+  
 
 }
   @media (min-width: 1200px) and (max-width:1599px) {
 
 
 
-    /*
-    .contactwrap, .footersponzorwrap  {
-      border-top: 3px solid #9b2557;
-  }
-    .child:nth-child(1) .newname {
-      border-top: 3px solid #9b2557;
-    }
-    
-    .child:nth-last-child(1) .newname {
-      border-bottom: 3px solid #9b2557;
-    }
-    
-    .newswrap:nth-last-child(-n+3) {
-      border-bottom: 3px solid #9b2557;
-    }
-    
-    .claniceminigrid:nth-last-child(-n+3) {
-      border-bottom: 3px solid #9b2557;  
-    }
-
-
-
-
-    /*
-    .claniceminigrid, .newsminigrid {
-      border-top: 3px solid #9b2557;  
-    }
-*/
 
 
 /*
@@ -1001,53 +838,20 @@ OVO JE UGAŠENO
 
 
 
-    /* OVO JR UGAŠENO */
-    /*
-    .child2:nth-child(1) .newname {
-      border-top: 3px solid #9b2557;
-    }
-    .child2:nth-last-child(1) .newname {
-      border-bottom: 3px solid #9b2557;
-    }
-*/
-
   }
 
  
   @media (min-width: 1600px) and (max-width:1999px) {
 
-    /* RICH TEXT PRVA FOTKA */
 
-
-
-    /*
-  .contactwrap, .footersponzorwrap  {
-    border-top: 4px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 4px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 4px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 4px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 4px solid #9b2557;  
-  }
-
-
-
-
-/*
-  .claniceminigrid, .newsminigrid {
-    border-top: 4px solid #9b2557;  
-  }
-*/
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+      border-top: 4px solid #9b2557;
+    }
+    
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+      border-bottom: 4px solid #9b2557;
+    }
 
 
 /*
@@ -1060,46 +864,18 @@ OVO JE UGAŠENO
     height: 4px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 4px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 4px solid #9b2557;
-  }
-*/
 }
   @media (min-width: 2000px) and (max-width:2399px) {
 
 
-
-    /*
-  .contactwrap, .footersponzorwrap {
-    border-top: 5px solid #9b2557;
-}
-  .child:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;  
-  }
-
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 5px solid #9b2557;  
-  }
-  */
-
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+      border-top: 5px solid #9b2557;
+    }
+    
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+      border-bottom: 5px solid #9b2557;
+    }
 
 /*  
   .nav-link.w-inline-block.w--current:before, .underline::before {
@@ -1110,51 +886,20 @@ OVO JE UGAŠENO
     height: 5px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-*/
   }
 
   @media (min-width: 2400px) {
   
   
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+      border-top: 5px solid #9b2557;
+    }
+    
+    .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+    .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+      border-bottom: 5px solid #9b2557;
+    }
 
-
-
-    /*
-  .contactwrap, .footersponzorwrap {
-    border-top: 5px solid #9b2557;
-}
-
-  
-  .child:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  
-  .child:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .newswrap:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;
-  }
-  
-  .claniceminigrid:nth-last-child(-n+3) {
-    border-bottom: 5px solid #9b2557;  
-  }
-
-
-
-  /*
-  .claniceminigrid, .newsminigrid {
-    border-top: 5px solid #9b2557;  
-  }
-  */
 
 
   /*
@@ -1166,14 +911,6 @@ OVO JE UGAŠENO
     height: 5px;
   }
 
-  /*
-  .child2:nth-child(1) .newname {
-    border-top: 5px solid #9b2557;
-  }
-  .child2:nth-last-child(1) .newname {
-    border-bottom: 5px solid #9b2557;
-  }
-  */
   }
 
 /*
