--- a/main.css
+++ b/main.css
@@ -744,6 +744,16 @@ MEDIA QUERY
   }
 
 
+  /*COOKIE*/
+
+  .ch2-container, .ch2-icon {
+    /* font-family: 'Nimbussansdot regu', sans-serif!important; */
+    font-size: 13px!important;
+   /*  line-height: 1.3em !important; */
+  }
+
+
+
 /* RICH TEXT FOTKA CENTAR*/
 .w-richtext figure.w-richtext-align-floatleft {
   width: 100%;
@@ -754,8 +764,6 @@ MEDIA QUERY
   margin-right: auto;
   margin-left: auto;
 }
-
-
 
   .swiper-pagination-bullet {
     height: 2px;
@@ -957,12 +965,7 @@ COOKIE SKIN
   padding-right: 9.5em!important;
   align-self: flex-end!important;
 }
-.ch2-container, .ch2-icon {
-  font-family: 'Nimbussansdot regu', sans-serif!important;
-  /* font-family: sans-serif; */
-   font-size: 1vw; 
-  /* line-height: 1; */
-}
+
 
 .ch2-style-light .ch2-dialog {
   background: #9b2557!important;
@@ -1010,9 +1013,11 @@ color: #f5f4f1 !important;
 }
 
 .ch2-container, .ch2-icon {
+  font-family: 'Nimbussansdot regu', sans-serif!important;
   font-size: 1vw  !important;
   line-height: 1.3em !important;
 }
+
 .ch2-theme-bar .ch2-dialog-actions button {
     min-width: auto !important;
 }
