--- a/main.css
+++ b/main.css
@@ -744,14 +744,7 @@ MEDIA QUERY
   }
 
 
-  /*COOKIE*/
-
-  .ch2-container, .ch2-icon {
-    /* font-family: 'Nimbussansdot regu', sans-serif!important; */
-    font-size: 13px!important;
-   /*  line-height: 1.3em !important; */
-  }
-
+ 
 
 
 /* RICH TEXT FOTKA CENTAR*/
@@ -1014,7 +1007,7 @@ color: #f5f4f1 !important;
 
 .ch2-container, .ch2-icon {
   font-family: 'Nimbussansdot regu', sans-serif!important;
-  font-size: 1vw  !important;
+  /*font-size: 1vw  !important;*/
   line-height: 1.3em !important;
 }
 
@@ -1123,3 +1116,14 @@ width: 1em;
 .searchresultswrap ul {
   list-style-type: none;
 }
+
+
+ /*COOKIE*/
+ @media (max-width: 980px) {
+  body {
+    font-size: 13px;
+}
+ .ch2-theme-bar .ch2-dialog-actions {
+       margin-top: 0px; 
+    }
+ }
