--- a/main.css
+++ b/main.css
@@ -1008,6 +1008,7 @@ color: #f5f4f1 !important;
 .ch2-container, .ch2-icon {
   font-family: 'Nimbussansdot regu', sans-serif!important;
   /* font-size: 1vw  !important; */
+  font-size: 14px!important;
   line-height: 1.3em !important;
 }
 
@@ -1031,12 +1032,6 @@ color: #f5f4f1 !important;
   margin-right: -0.95em!important;
 }
 
-.ch2-container, .ch2-icon {
-  font-family: sans-serif;
-  font-size: 14px;
-  line-height: 1.3;
-  text-transform: none;
-}
 
 /*
 ================================================================================
