--- a/main.css
+++ b/main.css
@@ -1119,7 +1119,14 @@ width: 1em;
  .ch2-theme-bar .ch2-dialog-actions {
        margin-top: 0px; 
     }
+
+    .ch2-container, .ch2-icon {
+       font-size: 14px!important;
+  
+  }
 /*
+
+
     .ch2-container, .ch2-icon {
   
       font-size: 13px!important;
