--- a/main.css
+++ b/main.css
@@ -1117,7 +1117,7 @@ width: 1em;
  @media (max-width: 980px) {
 
  .ch2-theme-bar .ch2-dialog-actions {
-       margin-top: 0px; 
+       margin-top: 0px!important; 
     }
 
     .ch2-container, .ch2-icon {
