--- a/main.css
+++ b/main.css
@@ -956,7 +956,7 @@ COOKIE SKIN
 */
 .ch2-theme-bar .ch2-dialog-content {
   padding-right: 2em!important;
-  align-self: flex-end!important;
+  align-self: center!important;
 }
 
 
