--- a/main.css
+++ b/main.css
@@ -1023,9 +1023,9 @@ color: #f5f4f1 !important;
   padding: 0.850em 5em !important;
 }
 
-.ch2-theme-bar .ch2-dialog-actions {
+/* .ch2-theme-bar .ch2-dialog-actions {
   margin-left: 15em!important;
-}
+} */
 
 .ch2-dialog-actions button {
   height: 0.813em!important;
