--- a/main.css
+++ b/main.css
@@ -1132,7 +1132,7 @@ width: 1em;
        margin-left: 2em!important;
     }
 
-    .ch2-container, .ch2-icon {
+    .ch2-container, .ch2-icon p {
        font-size: 14px!important;
   
   }
