--- a/main.css
+++ b/main.css
@@ -1168,7 +1168,7 @@ width: 1em;
   margin-right: 1em !important;
 }
 
-.ch2-theme-bar .ch2-dialog p {
+.ch2-theme-bar .ch2-dialog p { 
   font-size: 13px!important;
   line-height: 1;
 
@@ -1201,6 +1201,10 @@ width: 1em;
 
 .ch2-theme-bar .ch2-dialog-actions {
   display: inline-flex!important; 
+}
+
+.ch2-theme-bar .ch2-dialog {
+  padding: 0.850em 1.5em !important;
 }
 
  }
