--- a/main.css
+++ b/main.css
@@ -1105,9 +1105,9 @@ width: 1em;
 
 
 /* DATUM NOVOSTI */
-.home-sub {
+/* .home-sub {
   margin-left: -0.125em;
-}
+} */
 
 /* GLAVNI NASLOV */
 .mainheading {
