--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ ANIMATE ON RESIZE
     transition: width 1s ease-in-out, left 1.5s ease-in-out;
 }
 */
+/*
 body {
 -webkit-transition: all 1000ms ease-in-out;
 transition: all 1000ms ease-in-out;
