--- a/main.css
+++ b/main.css
@@ -114,11 +114,14 @@ ANIMATE ON RESIZE
     transition: width 1s ease-in-out, left 1.5s ease-in-out;
 }
 */
-/*
+
 body {
 -webkit-transition: all 1000ms ease-in-out;
 transition: all 1000ms ease-in-out;
+-moz-transition: all 1000ms ease-in-out;
+-o-transition: all 1000ms ease-in-out;
 }
+
 /*
 ================================================================================
 MENU 
