--- a/main.css
+++ b/main.css
@@ -270,13 +270,21 @@ text-shadow: none;}
   }
   
 
-  input:-internal-autofill-selected {
-    appearance: menulist-button;
-    background-color: #f5f4f1 !important;
-    background-image: none !important;
-    color: #9b2557 !important;
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid green;
+  -webkit-text-fill-color: green;
+  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
-
 
 
 
