--- a/main.css
+++ b/main.css
@@ -280,9 +280,9 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  border: 1px solid green;
-  -webkit-text-fill-color: green;
-  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  border: 0px solid #9b2557;
+  -webkit-text-fill-color: #9b2557;
+  -webkit-box-shadow: 0 0 0px 1000px #f5f4f1 inset;
   transition: background-color 5000s ease-in-out 0s;
 }
 
