--- a/main.css
+++ b/main.css
@@ -288,6 +288,16 @@ select:-webkit-autofill:focus {
 
 
 
+
+
+.underline .current_page_item > a  {
+  color: greenyellow!important;
+}
+
+
+
+
+
 /*
 ================================================================================
 BEN MINGO FONT SMOOTH - TEST
