--- a/main.css
+++ b/main.css
@@ -295,7 +295,7 @@ select:-webkit-autofill:focus {
   
 } */
 
-.underline  > a  {
+.underline .current-menu-item > a  {
   color: greenyellow!important;
   
 }
