--- a/main.css
+++ b/main.css
@@ -313,7 +313,7 @@ select:-webkit-autofill:focus {
   width: 1em;
 }
 
-.current-page-item > a {
+.current_page_item > a {
 
   background: red;
   
